--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div class="content">
             <small>Wlecome To </small>
             <h1>Anas Ramadan <br>Website</h1>
+            <p style="font-size: 22px;margin: 10px 0 30px;font-weight: bold;color: #eee;">Create A Customer , Not Money </p>
             <a href="https://anasramadan098.github.io/anasdeveloper/pages/Links/links.html" class="tour">Take A Tour</a>
         </div>
         <div class="side-bar">
