--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <span class="sp">S</span>
                 </div>
             </a>
-            <a href="https://anasramadan098.github.io/anasdeveloper/pages/Links/links.html" class="tour navv">Take A Tour</a>
+            <a href="https://anasramadan098.github.io/anasdeveloper/pages/Links/links.html" class="tour navv">Download Resume</a>
         </div>
         <div class="content">
             <small>Wlecome To </small>
