--- a/pages/Portofoilo/Coding/index.html
+++ b/pages/Portofoilo/Coding/index.html
@@ -8,69 +8,152 @@
     <title>Coding</title>
 </head>
 <body>
-        <div class="parent">
-            <!-- start full website -->
-            <div class="full-website">
-                <div class="d-flex">
-                    <div class="main">
-                        <div class="card">
-                            <img src="./Bondi.jpg" alt="">
-                        <div class="text-card">
-                            <h3>Bondi <span style="font-size: 15px; color: rgb(49, 48, 48);">(With BOOTSTARP)</span></h3>
-                            <p><a href="https://anasramadan098.github.io/Bondi/">LINK</a></p>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="main">
-                        <div class="card">
-                            <img src="./Leon.jpg" alt="">
-                        <div class="text-card">
-                            <h3>Leon</h3>
-                            <p><a href="https://anasramadan098.github.io/Leon/">LINK</a></p>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="main">
-                        <div class="card">
-                            <img src="./Kaspar.jpg" alt="">
-                        <div class="text-card">
-                            <h3>Kaspar</h3>
-                            <p><a href="https://anasramadan098.github.io/Kapar/">LINK</a></p>
-                        </div>
-                        </div>
-                    </div>
+    <div class="parent">
+        <div class="d-flex">
+            <div class="main">
+                <div class="card">
+                    <img class="one" src="./Bondi.jpg" alt="">
+                <div class="text-card">
+                    <h3>Bondi <span style="font-size: 15px; color: #777;">(Bootstap)</span></h3>
+                    <p><a href="https://anasramadan098.github.io/Bondi/">LINK</a></p>
+                </div>
                 </div>
             </div>
-            <!-- end full website -->
-            <div class="d-flex">
-                <div class="main">
-                    <div class="card">
-                        <img src="./logo.png" alt="">
-                    <div class="text-card">
-                        <h3>Starbacks Landing Page</h3>
-                        <p><a href="https://anasramadan098.github.io/Starbucks/">LINK</a></p>
-                    </div>
-                    </div>
+            <div class="main">
+                <div class="card">
+                    <img class="sec" src="./Kaspar.jpg" alt="">
+                <div class="text-card">
+                    <h3>Kasper</h3>
+                    <p><a href="https://anasramadan098.github.io/Kaspar/">LINK</a></p>
                 </div>
-                <div class="main">
-                    <div class="card">
-                        <img src="./pepsi.png" alt="">
-                    <div class="text-card">
-                        <h3>Pepsi Landing Page</h3>
-                        <p><a href="https://anasramadan098.github.io/Pepsi/">LINK</a></p>
-                    </div>
-                    </div>
                 </div>
-                <div class="main">
-                    <div class="card">
-                        <img src="./logo (1).png" alt="">
-                    <div class="text-card">
-                        <h3 id="joker">Joker Trailer Landing Page</h3>
-                        <p><a href="https://anasramadan098.github.io/Joker/">LINK</a></p>
-                    </div>
-                    </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="th" src="./master-logo.png" alt="">
+                <div class="text-card">
+                    <h3>Master</h3>
+                    <p><a href="https://anasramadan098.github.io/Master">LINK</a></p>
+                </div>
                 </div>
             </div>
         </div>
+        <div class="d-flex">
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./logo.png" alt="">
+                <div class="text-card">
+                    <h3>StartBucks Simple Landing Page</h3>
+                    <p><a href="https://anasramadan098.github.io/Starbucks/">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./pepsi.png" alt="">
+                <div class="text-card">
+                    <h3>Pepsi   Simple Landing Page</h3>
+                    <p><a href="https://anasramadan098.github.io/Pepsi/">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./logo (1).png" alt="">
+                <div class="text-card">
+                    <h3>Joker Tutorial Landing Page</h3>
+                    <p><a href="https://anasramadan098.github.io/Joker/">LINK</a></p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex">
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./Leon.jpg" alt="">
+                <div class="text-card">
+                    <h3>Leon</h3>
+                    <p><a href="https://anasramadan098.github.io/Leon/">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./section-logo.svg" alt="">
+                <div class="text-card">
+                    <h3>Snap Intro Section</h3>
+                    <p><a href="https://anasramadan098.github.io/Snap">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./sneacker-logo.svg" alt="">
+                <div class="text-card">
+                    <h3>Sneakrs Ecommerece Page</h3>
+                    <p><a href="https://anasramadan098.github.io/Sneakrs">LINK</a></p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex">
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./scroll.png" alt="">
+                <div class="text-card">
+                    <h3>Scrolling Animation</h3>
+                    <p><a href="https://anasramadan098.github.io/Scroll">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./padlock.png" alt="">
+                <div class="text-card">
+                    <h3>Generator Password App</h3>
+                    <p><a href="https://anasramadan098.github.io/Password">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./tasks.png" alt="">
+                <div class="text-card">
+                    <h3>TO DO List App</h3>
+                    <p><a href="https://anasramadan098.github.io/toDoList/">LINK</a></p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex">
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./speed.png" alt="">
+                <div class="text-card">
+                    <h3>Speed Test Game</h3>
+                    <p><a href="https://anasramadan098.github.io/speedGame">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card">
+                    <img class="fr" src="./quiz.jpg" alt="">
+                <div class="text-card">
+                    <h3>Quiz App</h3>
+                    <p><a href="https://anasramadan098.github.io/quizApp">LINK</a></p>
+                </div>
+                </div>
+            </div>
+            <!-- <div class="main">
+                <div class="card">
+                    <img class="fr" src="./download.jpg" alt="">
+                <div class="text-card">
+                    <h3>Memory Game</h3>
+                    <p><a href="https://anasramadan098.github.io/memoryGame/">LINK</a></p>
+                </div>
+                </div>
+            </div> -->
+        </div>
+    </div>
 </body>
 </html>
